<?xml version="1.0"?>
<package format="2">
  <name>pcl_tutorials_ros</name>
  <version>0.1.0</version>
  <description>Tutorial package for PCL with ROS</description>

  <maintainer email="macakasit@gamil.com">ShotaAk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>realsense2_camera</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
